--- a/res/layout-large/fragment_vehicle.xml
+++ b/res/layout-large/fragment_vehicle.xml
@@ -6,107 +6,105 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:baselineAligned="false" >
+        android:baselineAligned="false"
+        android:orientation="horizontal" >
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1" >
+        <LinearLayout
+            android:id="@+id/ll_vehicle_information"
+            style="@style/VehicleContainer"
+            android:layout_weight="1"
+            android:orientation="vertical" >
+
+            <!-- Vehicle Information -->
+
+            <TextView
+                android:id="@+id/tv_vehicle_information"
+                style="@style/sectionHeader"
+                android:layout_width="400dp"
+                android:layout_height="wrap_content"
+                android:text="@string/vehicle_tv_information" />
+
+            <EditText
+                android:id="@+id/edt_vehicle_name"
+                style="@style/textSizeNormal"
+                android:layout_width="400dp"
+                android:layout_height="wrap_content"
+                android:hint="@string/vehicle_edt_name"
+                android:inputType="text" />
+
+            <EditText
+                android:id="@+id/edt_vehicle_year"
+                style="@style/textSizeNormal"
+                android:layout_width="400dp"
+                android:layout_height="wrap_content"
+                android:hint="@string/vehicle_edt_year"
+                android:inputType="number" />
+
+            <EditText
+                android:id="@+id/edt_vehicle_make"
+                style="@style/textSizeNormal"
+                android:layout_width="400dp"
+                android:layout_height="wrap_content"
+                android:hint="@string/vehicle_edt_make"
+                android:inputType="text" />
+
+            <EditText
+                android:id="@+id/edt_vehicle_model"
+                style="@style/textSizeNormal"
+                android:layout_width="400dp"
+                android:layout_height="wrap_content"
+                android:hint="@string/vehicle_edt_model"
+                android:inputType="text" />
+        </LinearLayout>
+
+        <LinearLayout
+            style="@style/VehicleContainer"
+            android:layout_weight="1"
+            android:orientation="vertical" >
+
+            <!-- Vehicle settings -->
+
+            <TextView
+                android:id="@+id/tv_vehicle_settings"
+                style="@style/sectionHeader"
+                android:layout_width="400dp"
+                android:layout_height="wrap_content"
+                android:text="@string/vehicle_tv_settings" />
+
+            <!-- Distance -->
+
+            <Spinner
+                android:id="@+id/sp_vehicle_distance"
+                android:layout_width="400dp"
+                android:layout_height="wrap_content"
+                android:entries="@array/array_distance" />
+
+            <!-- Quantity -->
+
+            <Spinner
+                android:id="@+id/sp_vehicle_quantity"
+                android:layout_width="400dp"
+                android:layout_height="wrap_content"
+                android:entries="@array/array_quantity" />
+
+            <!-- Consupmtion -->
+
+            <Spinner
+                android:id="@+id/sp_vehicle_consumption"
+                android:layout_width="400dp"
+                android:layout_height="wrap_content"
+                android:entries="@array/array_consumption" />
+
+            <!-- Currency -->
 
             <LinearLayout
-                android:id="@+id/ll_vehicle_information"
-                style="@style/VehicleContainer"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentTop="true"
-                android:orientation="vertical" >
-
-                <!-- Vehicle Information -->
-
-                <TextView
-                    android:id="@+id/tv_vehicle_information"
-                    style="@style/sectionHeader"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/vehicle_tv_information" />
-
-                <EditText
-                    android:id="@+id/edt_vehicle_name"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:hint="@string/vehicle_edt_name"
-                    android:inputType="text" />
-
-                <EditText
-                    android:id="@+id/edt_vehicle_year"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:hint="@string/vehicle_edt_year"
-                    android:inputType="number" />
-
-                <EditText
-                    android:id="@+id/edt_vehicle_make"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:hint="@string/vehicle_edt_make"
-                    android:inputType="text" />
-
-                <EditText
-                    android:id="@+id/edt_vehicle_model"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:hint="@string/vehicle_edt_model"
-                    android:inputType="text" />
-            </LinearLayout>
-        </RelativeLayout>
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1" >
-
-            <LinearLayout
-                style="@style/VehicleContainer"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentTop="true"
-                android:orientation="vertical" >
-
-                <!-- Vehicle settings -->
-
-                <TextView
-                    android:id="@+id/tv_vehicle_settings"
-                    style="@style/sectionHeader"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/vehicle_tv_settings" />
-
-                <!-- Distance -->
-
-                <Spinner
-                    android:id="@+id/sp_vehicle_distance"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:entries="@array/array_distance" />
-
-                <!-- Quantity -->
-
-                <Spinner
-                    android:id="@+id/sp_vehicle_quantity"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:entries="@array/array_quantity" />
-
-                <!-- Consupmtion -->
-
-                <Spinner
-                    android:id="@+id/sp_vehicle_consumption"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:entries="@array/array_consumption" />
-
-                <!-- Currency -->
+                android:layout_width="400dp"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal" >
 
                 <TextView
                     android:id="@+id/tv_vehicle_currency"
+                    style="@style/textSizeNormal"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:gravity="center_vertical"
@@ -114,13 +112,16 @@
 
                 <EditText
                     android:id="@+id/edt_vehicle_currency"
+                    style="@style/textSizeNormal"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:ems="4"
+                    android:ems="3"
+                    android:maxEms="3"
+                    android:maxLength="3"
                     android:inputType="text"
                     android:text="@string/vehicle_edt_currency" />
             </LinearLayout>
-        </RelativeLayout>
+        </LinearLayout>
     </LinearLayout>
 
 </ScrollView>
