--- a/res/values-v11/styles.xml
+++ b/res/values-v11/styles.xml
@@ -2,4 +2,8 @@
 
     <style name="AppTheme" parent="android:Theme.Holo.Light" />
 
+    <style name="SpinnerItem" parent="@android:TextAppearance.Holo.Widget.TextView.SpinnerItem">
+        <item name="android:textSize">14sp</item>
+    </style>
+
 </resources>
