--- a/res/layout-large/activity_edit_filling.xml
+++ b/res/layout-large/activity_edit_filling.xml
@@ -74,8 +74,7 @@
             <Spinner
                 android:id="@+id/sp_edit_filling_fuelType"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:entries="@array/array_fueltype" />
+                android:layout_height="wrap_content" />
 
             <EditText
                 android:id="@+id/edt_edit_filling_comment"
