--- a/wiki/presentation/template/index.html
+++ b/wiki/presentation/template/index.html
@@ -31,7 +31,7 @@
 			Eine cloudbasierte Tankstatistik-App
         </h3>
         <p>
-			Timo Klostermann
+			Präsentation zur Bachelor-Thesis von Timo Klostermann
           <br>
 			16. Januar 2013
         </p>
@@ -46,10 +46,16 @@
 				Motivation
 			</li>
 			<li>
+				Tankstatistiken
+			</li>
+			<li>
 				Verwendete Technologien
 			</li>
 			<li>
 				Programmdemonstration
+			</li>
+			<li>
+				Fazit
 			</li>
 		</ul>
       </article>
@@ -58,329 +64,119 @@
         <h3>
 			Motivation
         </h3>
-        <p>
-			Meine Motivation
-        </p>
-        <p>
+        <ul>
+			<li>
+				Zugriff auf Daten durch mehrere Geräte
+			</li>
+			<li>
+				Unzufrieden mit bisherigen Lösungen
+			</li>
+			<li>
+				<p>
+					Erlangung von Kenntnissen
+				</p>
+				<ul>
+					<li>
+						Android
+					</li>
+					<li>
+						AppEngine
+					</li>
+			</li>
+		</ul>
       </article>
 	  
 	  <article>
 		<h3>
-			Überschrift
+			Tankstatistiken
 		</h3>
 		<p>
-			Test
-		<p>
+			Statistiken zu:
+		</p>
+		<ul>
+			<li>
+				Kosten
+			</li>
+			<li>
+				Entfernung
+			</li>
+			<li>
+				Verbrauch
+			</li>
+			<li>
+				Menge
+			</li>
+		</ul>
+	  </article>
 	  
-		<div id="phonediv" class="phoneOuterClass" style="position: absolute; top: 40px; left:582px;" >
+	  <article>
+		<h3>
+			Verwendete Technologien
+		</h3>
+		<ul>
+			<li>
+				<p>
+					Android
+				</p>
+				<ul>
+					<li>
+						API-Level 14
+					</li>
+					<li>
+						XML für Layout und Ressourcen
+					</li>
+					<li>
+						org.apache.http-Package für Netzwerk-Anfragen
+					</li>
+					<li>
+						Asynchrone Aufgaben
+					</li>
+				</ul>
+			</li>
+			<li>
+				<p>
+					Google AppEngine
+				</p>
+				<ul>
+					<li>
+						Java-Servlets für Anfragen
+					</li>
+					<li>
+						JDO 3.0 für den Datastore
+					</li>
+				</ul>
+			</li>
+		</ul>
+	  </article>
+	  
+	  <article>
+		<h3>
+			Programmdemonstration
+		</h3>
+	  
+		<div id="phonediv" class="phoneOuterClass" style="position: absolute; top: 100px; left:200px;" >
 			<img id="phone" class="phoneInnerClass" src="../images/black.png">
 		</div>
 		<p class="mobilephonecontrol">
-			<label for="ipaddr">IP-Addr.: </label>
-			<input type="text" id="ipaddr" value="192.168.178.27"><br />
 			<input type="button" id="pconn" onclick="phoneConnect()" value="verbinden" />
 			<input type="button" id="pdisconn" disabled="disabled" onclick="phoneDisconnect()" value="trennen" />
 		</p>
-		<!--<p class="mobilephonerotation">
-			<input type="button" id="protateleft" onclick="phoneRotate(-1)" value="horizontal" />
-			<button id="protatemiddle" disabled="disabled" onclick="phoneRotate(0)">ver-<br />ti-<br />kal</button>
-			<input type="button" id="protateright" onclick="phoneRotate(1)" value="horizontal" />
-		</p>
-		<p style="font-size:20px; position: absolute; top:637px; left:50px">the app</p>-->
 	  </article>
 
 	  <article>
-		<div id="phonediv2" class="phoneOuterClass" style="position: absolute; top: 40px; left:582px;" >
-			<img id="phone2" class="phoneInnerClass" src="../images/black.png">
-		</div>
+		<h3>
+			Fazit
+		</h3>
+		<ul>
+			<li>
+				Erkenntnisse erlangt
+			</li>
+			<li>
+				Zeitmanagement
+			</li>
+		</ul>
 	  </article>
 	  
-      <article class='smaller'>
-        <h3>
-          Simple slide with header and text (small font)
-        </h3>
-        <p>
-          This is a slide with just text. This is a slide with just text.
-          This is a slide with just text. This is a slide with just text.
-          This is a slide with just text. This is a slide with just text.
-        </p>
-        <p>
-          There is more text just underneath with a <code>code sample: 5px</code>.
-        </p>
-      </article>
-
-      <article>
-        <h3>
-          Slide with bullet points and a longer title, just because we
-          can make it longer
-        </h3>
-        <ul>
-          <li>
-            Use this template to create your presentation
-          </li>
-          <li>
-            Use the provided color palette, box and arrow graphics, and
-            chart styles
-          </li>
-          <li>
-            Instructions are provided to assist you in using this
-            presentation template effectively
-          </li>
-          <li>
-            At all times strive to maintain Google's corporate look and feel
-          </li>
-        </ul>
-      </article>
-
-      <article>
-        <h3>
-          Slide with bullet points that builds
-        </h3>
-        <ul class="build">
-          <li>
-            This is an example of a list
-          </li>
-          <li>
-            The list items fade in
-          </li>
-          <li>
-            Last one!
-          </li>
-        </ul>
-
-        <div class="build">
-          <p>Any element with child nodes can build.</p>
-          <p>It doesn't have to be a list.</p>
-        </div>
-      </article>
-
-      <article class='smaller'>
-        <h3>
-          Slide with bullet points (small font)
-        </h3>
-        <ul>
-          <li>
-            Use this template to create your presentation
-          <li>
-            Use the provided color palette, box and arrow graphics, and
-            chart styles
-          <li>
-            Instructions are provided to assist you in using this
-            presentation template effectively
-          <li>
-            At all times strive to maintain Google's corporate look and feel
-        </ul>
-      </article>
-
-      <article>
-        <h3>
-          Slide with a table
-        </h3>
-        
-        <table>
-          <tr>
-            <th>
-              Name
-            <th>
-              Occupation
-          <tr>
-            <td>
-              Luke Mahé
-            <td>
-              V.P. of Keepin’ It Real
-          <tr>
-            <td>
-              Marcin Wichary
-            <td>
-              The Michael Bay of Doodles
-        </table>
-      </article>
-      
-      <article class='smaller'>
-        <h3>
-          Slide with a table (smaller text)
-        </h3>
-        
-        <table>
-          <tr>
-            <th>
-              Name
-            <th>
-              Occupation
-          <tr>
-            <td>
-              Luke Mahé
-            <td>
-              V.P. of Keepin’ It Real
-          <tr>
-            <td>
-              Marcin Wichary
-            <td>
-              The Michael Bay of Doodles
-        </table>
-      </article>
-      
-      <article>
-        <h3>
-          Styles
-        </h3>
-        <ul>
-          <li>
-            <span class='red'>class="red"</span>
-          <li>
-            <span class='blue'>class="blue"</span>
-          <li>
-            <span class='green'>class="green"</span>
-          <li>
-            <span class='yellow'>class="yellow"</span>
-          <li>
-            <span class='black'>class="black"</span>
-          <li>
-            <span class='white'>class="white"</span>
-          <li>
-            <b>bold</b> and <i>italic</i>
-        </ul>
-      </article>
-      
-      <article>
-        <h2>
-          Segue slide
-        </h2>
-      </article>
-
-      <article>
-        <h3>
-          Slide with an image
-        </h3>
-        <p>
-          <img style='height: 500px' src='images/example-graph.png'>
-        </p>
-        <div class='source'>
-          Source: Sergey Brin
-        </div>
-      </article>
-
-      <article>
-        <h3>
-          Slide with an image (centered)
-        </h3>
-        <p>
-          <img class='centered' style='height: 500px' src='images/example-graph.png'>
-        </p>
-        <div class='source'>
-          Source: Larry Page
-        </div>
-      </article>
-
-      <article class='fill'>
-        <h3>
-          Image filling the slide (with optional header)
-        </h3>
-        <p>
-          <img src='images/example-cat.jpg'>
-        </p>
-        <div class='source white'>
-          Source: Eric Schmidt
-        </div>
-      </article>
-
-      <article>
-        <h3>
-          This slide has some code
-        </h3>
-        <section>
-        <pre>
-&lt;script type='text/javascript'&gt;
-  // Say hello world until the user starts questioning
-  // the meaningfulness of their existence.
-  function helloWorld(world) {
-    for (var i = 42; --i &gt;= 0;) {
-      alert('Hello ' + String(world));
-    }
-  }
-&lt;/script&gt;
-&lt;style&gt;
-  p { color: pink }
-  b { color: blue }
-  u { color: 'umber' }
-&lt;/style&gt;
-</pre>
-        </section>
-      </article>
-      
-      <article class='smaller'>
-        <h3>
-          This slide has some code (small font)
-        </h3>
-        <section>
-        <pre>
-&lt;script type='text/javascript'&gt;
-  // Say hello world until the user starts questioning
-  // the meaningfulness of their existence.
-  function helloWorld(world) {
-    for (var i = 42; --i &gt;= 0;) {
-      alert('Hello ' + String(world));
-    }
-  }
-&lt;/script&gt;
-&lt;style&gt;
-  p { color: pink }
-  b { color: blue }
-  u { color: 'umber' }
-&lt;/style&gt;
-</pre>
-        </section>
-      </article>
-      
-      <article>
-        <q>
-          The best way to predict the future is to invent it.
-        </q>
-        <div class='author'>
-          Alan Kay
-        </div>
-      </article>
-      
-      <article class='smaller'>
-        <q>
-          A distributed system is one in which the failure of a computer 
-          you didn’t even know existed can render your own computer unusable.
-        </q>
-        <div class='author'>
-          Leslie Lamport
-        </div>
-      </article>
-      
-      <article class='nobackground'>
-        <h3>
-          A slide with an embed + title
-        </h3>
-        
-        <iframe src='http://www.google.com/doodle4google/history.html'></iframe>
-      </article>
-
-      <article class='nobackground'>
-        <iframe src='http://www.google.com/doodle4google/history.html'></iframe>
-      </article>
-
-      <article class='fill'>
-        <h3>
-          Full-slide embed with (optional) slide title on top
-        </h3>
-        <iframe src='http://www.google.com/doodle4google/history.html'></iframe>
-      </article>
-      
-      <article>
-        <h3>
-          Thank you!
-        </h3>
-        
-        <ul>
-          <li>
-            <a href='http://www.google.com'>google.com</a>
-        </ul>
-      </article>
-
     </section>
 
   </body>
