--- a/wiki/presentation/template/index.html
+++ b/wiki/presentation/template/index.html
@@ -177,6 +177,15 @@
 		</ul>
 	  </article>
 	  
+	  <article>
+		<h3>
+			Vielen Dank für die Aufmerksamkeit
+		</h3>
+		<p>
+			Zeit für Fragen
+		</p>
+	  </article>
+	  
     </section>
 
   </body>
